--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="card">
                 <p><i class="fas fa-briefcase stroke-transparent"></i>&nbsp;&nbsp;&nbsp;Work Experience</p>
                 <ul>
-                    <li><p class="tags">AT & T <br><span>USa | <span>2019</span></span></p>
+                    <li><p class="tags">Netflix and Chill <br><span>USa | <span>2019</span></span></p>
                         <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a></li>
                     <li><p class="tags">American Airlines<br><span>Dallas | <span>2022</span></span></p>
                         <a class="edit" href="#"><i class="fas fa-pen stroke-transparent-blue"></i></a></li>
